--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
     "license": "MIT",
     "require": {
         "php": "^7.2.5",
+        "aws/aws-sdk-php": "^3.146",
         "bref/bref": "^0.5.29",
         "fideloper/proxy": "^4.2",
         "fruitcake/laravel-cors": "^2.0",
